--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,7 @@ const posts = (await getCollection('posts'))
       />
       <h1>About Me</h1>
       <p>
-        Hello. My name is Saif Khattak (Pashto خټک‎, IPA: xaˈʈak). I like birds, compilers, and caffeine. The image above is the item <b>Eyes of Corporate.
-        Insight</b> from the game
+        Hello. My name is Saif Khattak (Pashto خټک‎, IPA: xaˈʈak). I like birds, compilers, and caffeine. The image above is the item <b>Eyes of Corporate Insight</b> from the game
         <a
           href="https://store.steampowered.com/app/1388770/Cruelty_Squad/"
           target="_blank"
